@@ -2,6 +2,14 @@ Revision history for perl module JIRA-REST. -*- text -*-
 
 {{$NEXT}}
 
+  [New feature]
+
+  - JIRA::REST now supports the JIRA Software REST API and the JIRA Service
+    Desk REST API in addition to the JIRA Core REST API with a minimal
+    change. How cool is that!?
+
+    Many thanks Evan Brown for such a nice idea.
+
   [Changes]
 
   - Downgrade Perl version requirement from 5.10 to 5.8.8 to enable use on
